# PEPS

./: .gitignore  CMakeLists.txt  README.md
DataFeeds/: .RData  .Rhistory  CountryData.csv  CountryData.json  EquityData.json  GetDataExchangeRates.R  GetDataFeed.R  GetDataFeed.py  StocksName.xlsx
DataFeeds/ExchangeRates/: BRL.csv  CHF.csv  GBP.csv  JPY.csv  USD.csv
DataFeeds/OldData/: DE.csv  DSM.csv  FLS.csv  KUBTY.csv  MDLZ.csv  PNR.csv  SU.csv
Documentation/: EntretienPostRendu.docx
Kozei_DataFeeds/: EquityData.csv  EquityData.xlsx  GetDataExchangeRates.R  GetDataFeed.R  GetDataFeed.py  StocksName.xlsx  kozei_AnassdataFeed.json  kozei_dataExchangeRates.json  kozei_dataFeed.json  makeData.bat
Kozei_DataFeeds/ExchangeRates/: BRL.csv  CHF.csv  GBP.csv  JPY.csv  USD.csv
Kozei_DataFeeds/OldData/: A.csv  AGCO.csv  ALFA.csv  AWK.csv  BRF.csv  CF.csv  CSX.csv  DHR.csv  ECL.csv  K.csv  LR.csv  MOS.csv  NSC.csv  SGO.csv  SIE.csv  SVT.csv
Kozei_DataFeeds/Stocks/: 6326.TOK.csv  9020.TOK.csv  A.csv  AA9.BER.csv  ABBN.VSX.csv  AGCO.csv  AWK.csv  BRFS3.SAO.csv  CF.csv  CNI.csv  CSX.csv  DE.csv  DHR.csv  DSM.AMS.csv  ECL.csv  FLS.csv  K.csv  LR.PAR.csv  MDLZ.csv  MOS.csv  NSC.csv  PHIA.AMS.csv  PNR.csv  SEV.PAR.csv  SGO.PAR.csv  SIE.FRK.csv  SU.csv  SVT.LON.csv  UUGRY.csv  WEIR.LON.csv
NativeProject/: NativeProject.sln
NativeProject/NativeProject/: NativeProject.vcxproj  NativeProject.vcxproj.filters  cpp.hint
NativeProject/WindowsFormProject/: App.config  Form1.Designer.cs  Form1.cs  Program.cs  WindowsFormProject.csproj
NativeProject/Wrapper/: Wrapper.cpp  Wrapper.h  Wrapper.vcxproj  Wrapper.vcxproj.filters
PEPS/: PEPS.sln
PEPS/PEPS/: PEPS.cpp  PEPS.vcxproj  PEPS.vcxproj.filters
Test/: CMakeLists.txt  CMakeListsOld.txt  matrice.txt  testBSMVanilla.cpp  test_BackWardTest.cpp  test_BackWardTestSixMonths.cpp  test_BackWardTestSixMonthsWithDataProvider.cpp  test_BlackScholesModel.cpp  test_HistoricalDataProvider.cpp  test_Kozei_payoff.cpp  test_PL.cpp  test_PL_soutenance.cpp  test_PL_soutenance_asian.cpp  test_PL_soutenance_basket.cpp  test_PL_soutenance_perf.cpp  test_SimulatedDataProvider.cpp  test_asian.cpp  test_basket.cpp  test_basket1.cpp  test_basket_1.cpp  test_basket_2.cpp  test_call_t.cpp  test_call_t_en_0.cpp  test_dataSelecter.cpp  test_delta_kozei.cpp  test_full_kozei.cpp  test_getCorrelation.cpp  test_getCovariance.cpp  test_getLogRendements.cpp  test_getVolatilies.cpp  test_hedgePortfolio.cpp  test_hedgePortfolio_Kozei.cpp  test_hedgePortfolio_Kozei_ratesEx.cpp  test_hedgePortfolio_call.cpp  test_kozei.cpp  test_kozei_BackWardTest.cpp  test_mem_Kozei.cpp  test_mem_asset_t.cpp  test_mem_asset_t0.cpp  test_mem_asset_ti.cpp  (+19 more)
Test/ancien test/: test_BlackScholesModel.cpp  test_basket2.cpp  test_hedgePortfolio_Kozei_ratesEx.cpp  test_hedgePortfolio_call.cpp  test_kozei_BackWardTest.cpp  test_multiple_pnls.cpp  test_simul_performance.cpp  test_unit_asset_t0.cpp  test_unit_shift.cpp  test_vanilla_price.cpp
Test/autres test/: BackwardTest.cpp  Test_call_pricer_vs_BS.R  test_BackWardTest.cpp  test_HistoricalDataProvider.cpp  test_PL.cpp  test_PL_soutenance_perf.cpp  test_SimulatedDataProvider.cpp  test_asian.cpp  test_basket.cpp  test_basket_2.cpp  test_basket_2d.cpp  test_basket_t.cpp  test_call_t.cpp  test_call_t_en_0.cpp  test_dataSelecter.cpp  test_delta_kozei.cpp  test_getCovariance.cpp  test_kozei.cpp  test_multiple_pnl.cpp  test_multiple_pnls.cpp  test_performance.cpp  test_shift_asset.cpp  test_simul_asian.cpp  test_simul_basket1.cpp  test_simul_basket2.cpp  test_soutenance_call.cpp  test_taux_change.cpp  test_unit_asset_ti.cpp  test_unit_deltas.cpp  test_unit_pnl.cpp  test_validation_PNL.cpp  test_validation_estimation.cpp
Test/memory_test/: CMakeLists.txt  delta_ti.cpp  price_t0.cpp  resize.cpp  shift.cpp
Test/unit_test/: CMakeLists.txt  Computations.cpp  blackScholesModel.cpp  delta.cpp  test1.cpp  tools.cpp
Test/validation_test/: CMakeLists.txt  PL_histo_Asian.cpp  PL_histo_Call.cpp  PL_histo_Kozei.cpp  PL_rebal_Asian.cpp  PL_rebal_Call.cpp  PL_rebal_Kozei.cpp  correlation_and_covariance_test.cpp  price_call_formuleBS.cpp  price_from_files.cpp
Test/validation_test/PL_histo_output/: histogram.py
Test/validation_test/PL_rebal_output/: Graph.py
Test/validation_test/price_call_formuleBS_output/: Graph.py
UniTest/: UniTestParameterEstimation.cpp
doc/: doxy.rc
include/: Asian.hpp  AssetModel.hpp  Basket.hpp  BlackScholesMertonModel.hpp  BlackScholesModel.hpp  CIRModel.hpp  CMakeLists.txt  Call.hpp  Computations.hpp  DeltaCompute.hpp  DeltaDF.hpp  DeltaLH.hpp  DeltaPW.hpp  Delta_DF.hpp  Delta_LH.hpp  Delta_PW.hpp  HedgePortfolio.hpp  InterestRateModel.hpp  Kozei.hpp  MonteCarlo.hpp  Option.hpp  ParameterEstimation.hpp  Performance.hpp  SimpleRateModel.hpp  VasicekModel.hpp  pch.h
include/AssetModel/: BlackScholesMertonModel.hpp  BlackScholesModel.hpp
include/Data/: DataProvider.hpp  HistoricalDataProvider.hpp  SimulatedDataProvider.hpp
include/DataProvider/: DataProvider.hpp  DataSelecter.hpp  HistoricalDataProvider.hpp  SemiHistoricalDataProvider.hpp  SimulatedDataProvider.hpp  SuperDataSelecter.hpp
include/Delta/: Delta.hpp  DeltaDF.hpp  DeltaLH.hpp  DeltaPW.hpp
include/EndPoints/: Computations.hpp
include/Hedge/: DataSelecter.hpp  ForwardTest.hpp  HedgePortfolio.hpp  KozeiForwardTest.hpp  ParameterEstimation.hpp
include/InterestModel/: InterestRateModel.hpp  SimpleRateModel.hpp  VasicekModel.hpp
include/MonteCarlo/: MonteCarlo.hpp
src/: Asian.cpp  AssetModel.cpp  BackwardTest.cpp  Basket.cpp  BlackScholesMertonModel.cpp  BlackScholesModel.cpp  CIRModel.cpp  CMakeLists.txt  Call.cpp  Computations.cpp  DeltaCompute.cpp  DeltaLH.cpp  Delta_DF.cpp  Delta_LH.cpp  Delta_PW.cpp  FakeRnd.cpp  ForwardTest.cpp  HedgePortfolio.cpp  InterestRateModel.cpp  Kozei.cpp  KozeiBackwardTest.cpp  KozeiForwardTest.cpp  MonteCarlo.cpp  Option.cpp  ParameterEstimation.cpp  ParametersEstimation.cs  Performance.cpp  PnlRand.cpp  QuantoCall.cpp  SimpleRateModel.cpp  VasicekModel.cpp  forwardTest.cpp  main.cpp  pricer.cpp
src/Delta/: Delta.cpp  (+3 more)
(+174 files in other folders)
